Added the CreateBaseTableSQL tool

--- a/vaers-tools.properties
+++ b/vaers-tools.properties
@@ -1,3 +1,4 @@
 getCSVColumnInfo.outputDirString=/files/GetCSVColumnInfo/ColumnNamesAndLengthsFiles
 getCSVColumnInfo.outputFileName=1990-2021-ColumnNamesAndLengthsFile.json
 getCSVColumnInfo.inputDirString=/files/AllVAERSDataCSVS/
+createBaseTableSQL.outputDirString=/files/CreateBaseTableSQL/
