Added CreatePopulateBaseTablesSQL and mysql create and load

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@
 /target/
 .DS_Store
 .settings/
-AllVAERSDataCSVS/
-GetCSVColumnInfo/
-CreateBaseTableSQL/
+files/*
+!files/readme.txt
+dependency-reduced-pom.xml
