--- a/vaers-tools.properties
+++ b/vaers-tools.properties
@@ -1,4 +1,5 @@
+vaersCSVFilesDirString=/files/AllVAERSDataCSVS/
 getCSVColumnInfo.outputDirString=/files/GetCSVColumnInfo/ColumnNamesAndLengthsFiles
 getCSVColumnInfo.outputFileName=1990-2021-ColumnNamesAndLengthsFile.json
-getCSVColumnInfo.inputDirString=/files/AllVAERSDataCSVS/
 createBaseTableSQL.outputDirString=/files/CreateBaseTableSQL/
+createPopulateBaseTablesSQL.outputDirString=/files/CreatePopulateBaseTablesSQL/
